--- a/resume.css
+++ b/resume.css
@@ -50,7 +50,7 @@ color: rgb(240, 66, 8);
 }
         /* Backgroung */
 .res{  
-    background-image: url(../images/computer3.jpg);
+    background-image: url(computer3.jpg);
     color:white;
   }  
        /* End Background */
