--- a/PrakashResume.css
+++ b/PrakashResume.css
@@ -5,7 +5,15 @@
     box-sizing: border-box;
 }
   /*-- ----------------------- Nav Bar starting----------------------------------------*/
-h2
+html
+{
+    scroll-behavior: smooth;
+}
+  body
+{
+    background-color: black;
+}
+  h2
 {
     color: blue;
     padding-left:10px;
@@ -51,12 +59,14 @@ nav ul li a:hover
    /*-- ----------------------- Nav Bar Ending----------------------------------------*/
 
   /*-- ----------------------- Home page starting ----------------------------------------*/
-.Text
+  .Text
 {
     position: absolute;
     top:50%;
     left:8%;
     transform: translateY(-50%);
+    background-color: black;
+    background-size: cover;
 }
 h1
 {
@@ -108,6 +118,7 @@ h4
     width:100%;
     padding: 100px 0px;
     background-color:yellowgreen;
+     
 }
 .About img
 {
@@ -159,6 +170,10 @@ h4
     font-weight: bolder;
     text-shadow: 2px 2px 2px red;
 }
+.Text2 p{
+    font-size: x-large;
+    color:black;
+}
 p
 {
      padding-top: 10px;
@@ -205,8 +220,9 @@ p
 }
 .progress
 {
-    width:450px;
-    height:25px;
+    width:250px;
+    height:17px;
+    text-overflow: clip;
 }
 .progress:hover
 {
@@ -214,7 +230,8 @@ p
  zoom: 1;   
 }
  /* -----------------------------About ending------------------------------------------------ */
-.contact
+    /* -----------------------------Contact Starting------------------------------------------- */
+ /* .contact
 {
     background-color:gray;
     position: relative;
@@ -284,11 +301,18 @@ p
     font-weight: 500;
     color: red;
 }
-.form
+
+.icon a{
+    color: black;
+}
+.icon a:hover{
+    color:blue;
+} */
+/* .form
 {
     width:60%;
     padding:50px;
-    /* margin-left: 10px; */
+    /* margin-left: 10px; 
     background-color: white;
 }
 .form h2
@@ -342,5 +366,64 @@ p
      border: none;
      cursor: pointer;
      padding: 10px;
-     font-size: 18px;
+     font-size: 18px; 
+}*/
+.contact
+{
+    background: #000;
+    color: white;
+}
+.content1 p
+{
+    text-align: center;
+    padding-top:1%;
+    font-size: x-large;
+    color: white;
+}
+.content1 h2
+{
+    font-size: xx-large;
+    text-align: center;
+    padding-top:5px;
+    font-weight: bold;
+    color: yellow;
+    text-shadow: 2px 2px 2px red;
+}
+.container
+{
+    padding-top:2%;
+    padding-left:2%;
+    font-size:larger;
+    color:palevioletred;
+}
+.contactinfo h3
+{
+font-family: 'Franklin Gothic Medium';
+color: red;
+}
+.contactinfo .box .icon
+{
+    font-size:22px;
+    max-width:20px;
+    padding-bottom:2px;
+    text-align: center;
+    max-height:20px;
+}
+.contactinfo .box .text3
+{
+     font-size:x-large;
+     padding-top:15px;
+     color: white;
+}
+.contactinfo .icon a:hover
+{
+    color: red;
+}
+.text3 p{
+    /* padding-bottom: 10px; */
+    color:white;
+}
+.box h3
+{
+    padding-top: 2px;
 }
